[project]
name = "comfyui-modelbrowser"
description = "Adds a browse button to every model dropdown so you can load models from anywhere on disk. Extra paths persist across restarts. Supports English, Spanish, Chinese and Japanese."
version = "1.3.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/fuskio64/ComfyUI-ModelBrowser"

[tool.comfy]
PublisherId = "reave"
DisplayName = "Model Browser"
Icon = ""
